src/test/ui/typeck/issue-106030.stderr
error[E0425]: cannot find function `unknown` in this scope
  --> $DIR/issue-106030.rs:2:5
   |
LL |     unknown(1, |glyf| {
   |     ^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
